--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 *{
-    font-family:  cursive;
-    font-optical-sizing: auto;
-    font-weight: 24px;
-    font-style: normal;
+
+  font-family: "Playwrite CU", cursive;
+  font-optical-sizing: auto;
+  font-weight: 24px;
+  font-style: normal;
+
 }
 
 body{
