--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 *{
 
-  font-family: "Playwrite CU", cursive;
-  font-optical-sizing: auto;
-  font-weight: 24px;
-  font-style: normal;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 24px;
+    font-style: normal;
 
 }
 
